css/main.css
@import "variables.css";
@import "body.css";
@import "navbar.css";
@import "header.css";
@import "about.css";
@import "projects.css";
@import "contact.css";
@import "footer.css";

.sectionSplit{
    height: 16vh;
    width: 100%;
    background-color: var(--coffeemuglight);
    position: relative;
    /* z-index: -1; */
    color: white;
    font-family: var(--scriptFont);
    font-size: 2.25em;
    padding-top: .7em;
    /* border-bottom: 5px solid rgb(194, 193, 193); */
}

.sectionSplit2{
    width: 100%;
    height: auto;
    background-color: var(--coffeemuglight);
    margin-top: 2em;
    margin-bottom: 2.75em;
    text-align: center;
}

#quote{
    color: white;
    font-family: var(--scriptFont);
    font-size: 3em;
    padding-top: .25em;
}

#credit{
    color: white;
    fontfamily: var(--scriptFont);
    font-size: 2.5em;
    float: right;
    padding-bottom: .25em;
}

#aboutJump{
    margin-top: -3%;
    padding-bottom: none;
    display: block;
    /* padding-bottom: 1em; */
    /* font-size: 0em; */
}

#projectsJump{
    margin-top: -3%;
    padding-bottom: none;
    display: block;
}

#contactJump{
    margin-top: -3%;
    padding-bottom: none;
    display: block;
}

